_build/CrispASR/include/crispasr_session.h

struct crispasr_session;
typedef struct crispasr_session crispasr_session;
CRISPASR_SESSION_API crispasr_session* crispasr_session_open_explicit(const char* model_path, const char* backend_name,
                                                                      int n_threads);
CRISPASR_SESSION_API crispasr_session* crispasr_session_open(const char* model_path, int n_threads);
CRISPASR_SESSION_API int crispasr_session_available_backends(char* out_csv, int out_cap);
// Acoustic language detected by the last transcribe, as an ISO-639-1 code
// (whisper only; other backends fall back to the source-language hint, then
// "unknown"). Writes into out_buf (NUL-terminated, truncated to out_cap) and
// returns the code length in bytes, or -1 on bad args. Distinct from the
// text-LID pass crispasr_text_detect_language.
CRISPASR_SESSION_API int crispasr_session_detected_language(crispasr_session* s, char* out_buf, int out_cap);
// CTC vocabulary access (Omni CTC backend). crispasr_session_n_vocab returns
// the number of SentencePiece pieces in the loaded model (0 for backends that
// don't expose a CTC vocab); crispasr_session_token_text maps a token id in
// [0, n_vocab) to its raw piece (U+2581 word-boundary marker intact), or ""
// when out of range or unsupported. Pairs with crispasr_session_result_logits
// to detokenize a greedy CTC decode.
CRISPASR_SESSION_API int crispasr_session_n_vocab(crispasr_session* s);
CRISPASR_SESSION_API const char* crispasr_session_token_text(crispasr_session* s, int id);
// Set the active backend's companion codec/tokenizer model. For OmniVoice this
// is its HiggsAudioV2 tokenizer; for Chatterbox it is S3Gen.
CRISPASR_SESSION_API int crispasr_session_set_codec_path(crispasr_session* s, const char* path);
// Set the active TTS backend's voice from its native format. Chatterbox accepts
// a conditioning GGUF or reference WAV; OmniVoice accepts a reference WAV and
// uses ref_text_or_null as its transcript. Returns -3 when the active backend
// has no voice-setting implementation.
CRISPASR_SESSION_API int crispasr_session_set_voice(crispasr_session* s, const char* path,
                                                    const char* ref_text_or_null);
CRISPASR_SESSION_API int crispasr_session_set_speaker_name(crispasr_session* s, const char* name);
CRISPASR_SESSION_API int crispasr_session_set_speaker_id(crispasr_session* s, int id);
CRISPASR_SESSION_API int crispasr_session_n_speakers(crispasr_session* s);
CRISPASR_SESSION_API const char* crispasr_session_get_speaker_name(crispasr_session* s, int i);
CRISPASR_SESSION_API int crispasr_session_set_instruct(crispasr_session* s, const char* instruct);
// #316: synthesize `phonemes` verbatim instead of phonemizing the text — the
// seam between text processing and the acoustic model. Use it to reproduce
// another implementation's pronunciation exactly, or to separate "the G2P is
// wrong" from "the model is wrong". Empty clears. Returns -2 (soft no-op) when
// the active backend exposes no phonemes-in call; kokoro and piper do.
CRISPASR_SESSION_API int crispasr_session_set_tts_phonemes(crispasr_session* s, const char* phonemes);
CRISPASR_SESSION_API int crispasr_session_is_custom_voice(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_is_voice_design(crispasr_session* s);
CRISPASR_SESSION_API float* crispasr_session_synthesize(crispasr_session* s, const char* text, int* out_n_samples);
CRISPASR_SESSION_API int crispasr_session_set_hotwords(crispasr_session* s, const char* hotwords, float boost);
CRISPASR_SESSION_API void crispasr_session_close(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_kokoro_clear_phoneme_cache(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_kokoro_clear_phoneme_cache(crispasr_session*);
CRISPASR_SESSION_API int crispasr_session_set_source_language(crispasr_session* s, const char* lang);
CRISPASR_SESSION_API int crispasr_session_set_target_language(crispasr_session* s, const char* lang);
CRISPASR_SESSION_API int crispasr_session_set_punctuation(crispasr_session* s, int enable);
// Select + load a punctuation-restoration model (alias auto|firered|fullstop|
// punctuate-all|pcs, or a .gguf path; "none"/NULL unloads). Auto-downloads on
// first use. Restores punctuation on backends that emit none (parakeet, CTC).
// Returns 0 on success/unload, -1 bad handle, -2 load failed, -3 not compiled.
CRISPASR_SESSION_API int crispasr_session_set_punc_model(crispasr_session* s, const char* punc_model);
CRISPASR_SESSION_API int crispasr_session_set_translate(crispasr_session* s, int enable);
CRISPASR_SESSION_API int crispasr_session_set_ask(crispasr_session* s, const char* prompt);
CRISPASR_SESSION_API int crispasr_session_set_temperature(crispasr_session* s, float temperature, uint64_t seed);
CRISPASR_SESSION_API int crispasr_session_set_tts_seed(crispasr_session* s, uint64_t seed);
CRISPASR_SESSION_API int crispasr_session_set_tts_steps(crispasr_session* s, int steps);
CRISPASR_SESSION_API int crispasr_session_set_tts_num_candidates(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_g2p_dict(crispasr_session* s, const char* source);
CRISPASR_SESSION_API int crispasr_session_set_top_p(crispasr_session* s, float top_p);
CRISPASR_SESSION_API int crispasr_session_set_min_p(crispasr_session* s, float min_p);
CRISPASR_SESSION_API int crispasr_session_set_repetition_penalty(crispasr_session* s, float r);
CRISPASR_SESSION_API int crispasr_session_set_top_k(crispasr_session* s, int top_k);
CRISPASR_SESSION_API int crispasr_session_set_do_sample(crispasr_session* s, int enable);
CRISPASR_SESSION_API int crispasr_session_set_cfg_weight(crispasr_session* s, float cfg_weight);
CRISPASR_SESSION_API int crispasr_session_set_tts_noise_temp(crispasr_session* s, float noise_temp);
CRISPASR_SESSION_API int crispasr_session_set_exaggeration(crispasr_session* s, float exaggeration);
CRISPASR_SESSION_API int crispasr_session_set_max_speech_tokens(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_length_scale(crispasr_session* s, float scale);
CRISPASR_SESSION_API int crispasr_session_set_best_of(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_max_new_tokens(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_frequency_penalty(crispasr_session* s, float penalty);
CRISPASR_SESSION_API int crispasr_session_set_beam_size(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_return_logits(crispasr_session* s, int enable);
CRISPASR_SESSION_API int crispasr_session_set_grammar_text(crispasr_session* s, const char* gbnf_text,
                                                           const char* root_rule, float penalty);
CRISPASR_SESSION_API int crispasr_session_set_fallback_thresholds(crispasr_session* s, float entropy_thold,
                                                                  float logprob_thold, float no_speech_thold,
                                                                  float temperature_inc);
CRISPASR_SESSION_API int crispasr_session_set_alt_n(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_whisper_decode_extras(crispasr_session* s, int suppress_nst,
                                                                    const char* suppress_regex,
                                                                    int carry_initial_prompt);