_build/CrispASR/bindings/csharp/CrispASR/NativeMethods.cs

using System;
using System.Runtime.InteropServices;
using System.Text;

namespace CrispASR
{
    /// <summary>
    /// Raw P/Invoke declarations for the crispasr shared library.
    /// The public <see cref="Session"/> class wraps these into safe,
    /// idiomatic C# types.
    /// </summary>
    internal static class NativeMethods
    {
        // One name, shared with NativeLibraryResolver — the resolver only
        // intercepts loads of exactly this name, so the two must not drift.
        private const string Lib = NativeLibraryResolver.LibraryName;

        // An explicit type initializer clears `beforefieldinit`, so the CLR is
        // required to run this before the first static member of the class is
        // touched — i.e. before any P/Invoke below can attempt a load. That is
        // what makes the resolver's search order authoritative rather than a
        // race against default probing.
        static NativeMethods() => NativeLibraryResolver.Install();

        // ---- Session lifecycle ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_open(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string modelPath, int nThreads);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_open_explicit(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string modelPath,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string backendName,
            int nThreads);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_session_close(IntPtr session);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_available_backends(
            byte[] outCsv, int outCap);

        // Acoustic detected language (Whisper) as an ISO-639-1 code into outBuf;
        // other backends fall back to the source-language hint, then "unknown".
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_detected_language(
            IntPtr session, byte[] outBuf, int outCap);

        // CTC vocabulary access (Omni CTC backend). n_vocab is the piece count;
        // token_text returns a model-owned const char* (do not free) or "" when
        // out of range / unsupported.
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_n_vocab(IntPtr s);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_token_text(IntPtr s, int id);

        // ---- Session setters ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_codec_path(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_voice(
            IntPtr s,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string? refText);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_speaker_name(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_speaker_id(IntPtr s, int id);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_n_speakers(IntPtr s);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_get_speaker_name(IntPtr s, int i);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_instruct(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string instruct);

        // #316: synthesize these phonemes verbatim, skipping the G2P. Empty clears. kokoro and piper only (rc=-2).
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_tts_phonemes(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string phonemes);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_session_set_tts_pad_silence_ms(
            IntPtr s, int ms);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_is_custom_voice(IntPtr s);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_is_voice_design(IntPtr s);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_punc_model(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string puncModel);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_hotwords(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string hotwords, float boost);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_sensitivity(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string preset);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_g2p_dict(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string source);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_source_language(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string lang);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_target_language(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string lang);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_tts_reference_language(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string lang);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_punctuation(IntPtr s, int enable);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_translate(IntPtr s, int enable);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_temperature(IntPtr s, float temperature, ulong seed);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_tts_seed(IntPtr s, ulong seed);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_max_new_tokens(IntPtr s, int n);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_frequency_penalty(IntPtr s, float penalty);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_tts_steps(IntPtr s, int steps);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_tts_num_candidates(IntPtr s, int n);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_top_p(IntPtr s, float topP);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_top_k(IntPtr s, int topK);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_do_sample(IntPtr s, int enable);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_min_p(IntPtr s, float minP);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_repetition_penalty(IntPtr s, float r);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_cfg_weight(IntPtr s, float cfgWeight);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_tts_noise_temp(IntPtr s, float noiseTemp);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_exaggeration(IntPtr s, float exaggeration);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_max_speech_tokens(IntPtr s, int n);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_min_speech_tokens(IntPtr s, int n);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_length_scale(IntPtr s, float scale);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_best_of(IntPtr s, int n);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_beam_size(IntPtr s, int n);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_return_logits(IntPtr s, int enable);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_grammar_text(
            IntPtr s,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string gbnfText,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string rootRule,
            float penalty);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_fallback_thresholds(
            IntPtr s, float entropyThold, float logprobThold,
            float noSpeechThold, float temperatureInc);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_alt_n(IntPtr s, int n);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_whisper_decode_extras(
            IntPtr s, int suppressNst,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string suppressRegex,
            int carryInitialPrompt);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_ask(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string prompt);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_kokoro_clear_phoneme_cache(IntPtr s);

        // ---- TTS synthesize ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_synthesize(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
            out int outNSamples);
